select or move over the transform tool #57737

Closed
opened 2018-11-09 02:13:17 +01:00 by Florent · 13 comments

System Information
windows 10 64 bits and GeForce GTX 1080 Ti

Blender Version
Broken: 2.80 a421cfa8d3
Worked: (optional)

Short description of error
blender crash

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

There's 2 ways to crash blender:

  1. the faster way
    select the Move tool with the mouse
    Hold Shift and select the transform tool
    if blender not crash immediately select the Move tool again
    repeat the previous steps until blender crash

  2. the slower

select the Move tool with the mouse
Hold Shift and move the mouse up and down over the other tools (transform, rotation, scale)

with these 2 methods blender crash immediately or you have to wait 10, 15 seconds

**System Information** windows 10 64 bits and GeForce GTX 1080 Ti **Blender Version** Broken: 2.80 a421cfa8d31 Worked: (optional) **Short description of error** blender crash **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps There's 2 ways to crash blender: 1. the faster way select the Move tool with the mouse Hold Shift and select the transform tool if blender not crash immediately select the Move tool again repeat the previous steps until blender crash 2. the slower select the Move tool with the mouse Hold Shift and move the mouse up and down over the other tools (transform, rotation, scale) with these 2 methods blender crash immediately or you have to wait 10, 15 seconds
Author

Added subscriber: @laaameche

Added subscriber: @laaameche
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-11-09 12:52:36 +01:00
Member

Can confirm the crash.

Operator TRANSFORM_OT_from_gizmo description ( ot-description ) is NULL here:

1 ui_tooltip_data_append_from_keymap interface_region_tooltip.c 333  0x1f9cad4 
2 ui_tooltip_data_from_tool          interface_region_tooltip.c 577  0x1f9d5ae 
3 UI_tooltip_create_from_button      interface_region_tooltip.c 1226 0x1f9f5f6 
4 ui_but_tooltip_init                interface_handlers.c       7213 0x1f6c02f 
5 WM_tooltip_init                    wm_tooltip.c               123  0x1c72e0b 
6 wm_event_do_handlers               wm_event_system.c          2998 0x1c4dc97 

This used to work in ba36e9, bisecting now ...
Since this is tool related, this is one for @ideasman42, I guess?

Can confirm the crash. Operator `TRANSFORM_OT_from_gizmo` description ( `ot-description` ) is NULL here: ``` 1 ui_tooltip_data_append_from_keymap interface_region_tooltip.c 333 0x1f9cad4 2 ui_tooltip_data_from_tool interface_region_tooltip.c 577 0x1f9d5ae 3 UI_tooltip_create_from_button interface_region_tooltip.c 1226 0x1f9f5f6 4 ui_but_tooltip_init interface_handlers.c 7213 0x1f6c02f 5 WM_tooltip_init wm_tooltip.c 123 0x1c72e0b 6 wm_event_do_handlers wm_event_system.c 2998 0x1c4dc97 ``` This used to work in ba36e9, bisecting now ... Since this is tool related, this is one for @ideasman42, I guess?

This issue was referenced by 3d0383d259

This issue was referenced by 3d0383d25932aab3091bf321b3a43e51329882fb
Member

caused by 60d7740fe6.

Simple fix in D3923 (not sure if this should be solved more gracefully though -- maybe make ot->description not mandatory?)

caused by 60d7740fe6. Simple fix in [D3923](https://archive.blender.org/developer/D3923) (not sure if this should be solved more gracefully though -- maybe make ot->description not mandatory?)

Added subscriber: @capnm

Added subscriber: @capnm

Oh, this null pointer is actually the cause of #57639.

Oh, this null pointer is actually the cause of #57639.
Member

@capnm : so D3923 fixes #57639 as well?

@capnm : so [D3923](https://archive.blender.org/developer/D3923) fixes #57639 as well?

Added subscriber: @brecht

Added subscriber: @brecht

The description is allowed to be NULL to indicate there being no description. The check should be ot->description ? rather than ot->description[0] ?.

Adding a tooltip to the operator is good too, since basically all operators should have descriptions, but not the entire fix.

The description is allowed to be `NULL` to indicate there being no description. The check should be `ot->description ?` rather than `ot->description[0] ?`. Adding a tooltip to the operator is good too, since basically all operators should have descriptions, but not the entire fix.
Member

thanx @brecht, D3923 updated

thanx @brecht, [D3923](https://archive.blender.org/developer/D3923) updated

so D3923 fixes #57639 as well?

Yes, the null-check fixes that. I think I have sometimes accidentally pressed the shift-key while using the transform tool.

By the way, I wonder if it makes sense that the tooltips change:
image.png

> so [D3923](https://archive.blender.org/developer/D3923) fixes #57639 as well? Yes, the null-check fixes that. I think I have sometimes accidentally pressed the shift-key while using the transform tool. By the way, I wonder if it makes sense that the tooltips change: ![image.png](https://archive.blender.org/developer/F5460749/image.png)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57737
No description provided.