Fix T57737: crash displaying expanded tooltip for transform tool

Maniphest Tasks: T57737

Differential Revision: https://developer.blender.org/D3923