source/blender/editors/transform/transform_ops.c
@@ -1170,6 +1170,7 @@ static void TRANSFORM_OT_from_gizmo(struct wmOperatorType *ot)
 {
 	/* identifiers */
 	ot->name   = "Transform From Gizmo";
+	ot->description = "Transform selected items by mode type";
 	ot->idname = "TRANSFORM_OT_from_gizmo";
 	ot->flag = 0;
 
